font-family  changed

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* General styles for body and layout */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #d38b8b;
