text color header

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
     background-color: #333;
-    color: white;
+    color: rgb(52, 20, 167);
     padding: 10px 0;
     text-align: center;
     font-size: 24px;
